<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_add_url_container"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_add_url"
        android:layout_margin="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_web_link"
        android:tint="@color/white"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        tools:ignore="UseAppTint" />

    <TextView
        android:id="@+id/text_add_url"
        app:layout_constraintTop_toTopOf="@id/image_add_url"
        app:layout_constraintBottom_toBottomOf="@id/image_add_url"
        app:layout_constraintLeft_toRightOf="@id/image_add_url"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/white"
        android:includeFontPadding="false"
        android:textSize="@dimen/_14ssp"
        android:text="@string/add_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_url"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/enter_url"
        android:textColor="@color/white"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingLeft="@dimen/_8sdp"
        android:paddingRight="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp"
        android:layout_marginRight="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/image_add_url"
        app:layout_constraintLeft_toLeftOf="@id/image_add_url"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_8sdp" />

    <TextView
        android:id="@+id/text_add"
        android:layout_margin="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/add"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_cancel"
        android:layout_margin="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel_dialog"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/edit_url"
        app:layout_constraintRight_toLeftOf="@id/text_add"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>