<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_delete_note_container"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_delete_note"
        android:layout_margin="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        android:tint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        tools:ignore="UseAppTint" />

    <TextView
        app:layout_constraintLeft_toRightOf="@id/image_delete_note"
        app:layout_constraintTop_toTopOf="@id/image_delete_note"
        app:layout_constraintBottom_toBottomOf="@id/image_delete_note"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:text="@string/delete_note"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_delete_note_message"
        app:layout_constraintTop_toBottomOf="@id/image_delete_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_delete_note"
        android:layout_margin="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:fontFamily="@font/ubuntu_regular"
        android:textColor="@color/white"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        android:textSize="@dimen/_12ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_delete_note"
        android:layout_marginBottom="@dimen/_14ssp"
        android:layout_marginRight="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/text_delete_note_message"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="true"
        android:padding="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/delete_note"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/colorDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/text_cancel"
        app:layout_constraintTop_toTopOf="@id/text_delete_note"
        app:layout_constraintBottom_toBottomOf="@id/text_delete_note"
        app:layout_constraintRight_toLeftOf="@id/text_delete_note"
        android:layout_marginRight="@dimen/_14ssp"
        android:textColor="@color/purple_700"
        android:fontFamily="@font/ubuntu_bold"
        android:padding="@dimen/_8sdp"
        android:textAllCaps="true"
        android:textSize="@dimen/_14ssp"
        android:text="@string/cancel_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>