<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_miscellaneous"
    android:background="@drawable/background_miscellaneous"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/image_arrow"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_2sdp"/>

    <TextView
        android:id="@+id/text_miscellaneous"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/miscellaneous"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"/>

    <LinearLayout
        android:id="@+id/layout_note_color"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_color_one"
                android:background="@drawable/background_note_color_1"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"/>

            <ImageView
                android:id="@+id/image_color_one"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                app:tint="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_color_two"
                android:background="@drawable/background_note_color_2"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"/>

            <ImageView
                android:id="@+id/image_color_two"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                app:tint="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_color_three"
                android:background="@drawable/background_note_color_3"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"/>

            <ImageView
                android:id="@+id/image_color_three"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                app:tint="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_color_four"
                android:background="@drawable/background_note_color_4"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"/>

            <ImageView
                android:id="@+id/image_color_four"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                app:tint="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_color_five"
                android:background="@drawable/background_note_color_5"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"/>

            <ImageView
                android:id="@+id/image_color_five"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                app:tint="@color/white" />
        </FrameLayout>

        <TextView
            android:id="@+id/text_pick_color"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:layout_gravity="center_vertical"
            android:text="@string/pick_color"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_image_add"
        android:layout_margin="@dimen/_12sdp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            android:tint="@color/colorIcons"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            tools:ignore="UseAppTint" />

        <TextView
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_12ssp"
            android:layout_gravity="center_vertical"
            android:text="@string/add_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_add_url"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:src="@drawable/ic_web_link"
            android:contentDescription="@string/app_name"
            android:tint="@color/colorIcons"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            tools:ignore="UseAppTint" />

        <TextView
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_url"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_12ssp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>