<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purple_200"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateNoteActivity">

    <ScrollView
        android:clipToPadding="false"
        android:layout_marginBottom="@dimen/_40sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_back"
                android:layout_marginLeft="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_goneMarginLeft="@dimen/_8sdp"
                android:paddingLeft="@dimen/_8sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                app:tint="@color/colorIcons"
                android:layout_marginStart="@dimen/_6sdp" />

            <ImageView
                android:id="@+id/image_save"
                android:layout_marginRight="@dimen/_12sdp"
                android:background="@drawable/background_done_button"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_done"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/image_back"
                app:layout_constraintBottom_toBottomOf="@id/image_back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:tint="@color/colorIcons" />

            <EditText
                android:id="@+id/edit_text_note_title"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@id/image_back"
                app:layout_constraintLeft_toLeftOf="@id/image_back"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"/>

            <TextView
                android:id="@+id/text_date_time"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:textColorHint="@color/colorIcons"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintRight_toRightOf="@id/edit_text_note_title"
                app:layout_constraintLeft_toLeftOf="@id/edit_text_note_title"
                app:layout_constraintTop_toBottomOf="@id/edit_text_note_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edit_text_note_sub_title"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@null"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                app:layout_constraintLeft_toRightOf="@id/view_sub_title_indicator"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_date_time"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/colorNoteSubTitleText"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_14sdp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/view_sub_title_indicator"
                android:layout_marginLeft="@dimen/_12sdp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/edit_text_note_sub_title"
                app:layout_constraintTop_toTopOf="@id/edit_text_note_sub_title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="@dimen/_6sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp" />

            <ImageView
                android:id="@+id/image_note"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/edit_text_note_sub_title"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/layout_web_url"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:visibility="gone"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/image_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_web_url"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_14ssp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <EditText
                android:id="@+id/edit_text_note"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:padding="@dimen/_8sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:maxHeight="@dimen/_100sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_web_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <include
        layout="@layout/layout_miscellaneous"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>